# doubao-translator-rust

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
scripts/: install-service.sh  uninstall-service.sh
src/: main.rs
static/: app.js  index.html  style.css
systemd/: doubao-translator.service
