[package]
name = "doubao-translator-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
dotenvy = "0.15"
lru = "0.12"
md5 = "0.7"

[[bin]]
name = "translator"
path = "src/main.rs"
